--- a/src/components/LandingHeader/LandingHeader.css
+++ b/src/components/LandingHeader/LandingHeader.css
@@ -2,9 +2,13 @@
   box-sizing: border-box;
 }
 
+
 header {
   height: 100vh;
   padding: 45px 15px;
+  background-image: url("https://www.born05.com/wp-content/uploads/2016/04/highlightimage_ifly50_born05_04.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .sub-header{
