--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,6 +1,5 @@
 * {
   box-sizing: border-box;
-  font-family: 'Roboto Condensed', sans-serif;
 }
 
 nav{
@@ -71,13 +70,14 @@ nav{
   justify-content: center;
   margin-top: 7px;
   font-size: 15px;
-  margin-top: 24px;
+  margin-top: 26px;
   max-width: 200px;
   transition: background-color 0.5s ease;
+  border: none;
 }
 
 .login-btn:hover{
-  background-color: #DB57DB;
+  /* background-color: #DB57DB; */
 }
 
 .register-link{
