--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,3 +1,9 @@
 * {
   box-sizing: border-box;
+  /* font-family: 'Roboto Condensed', sans-serif; */
+  color: #3B3B3B;
+}
+
+fieldset{
+  border: none;
 }
