--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -3,7 +3,7 @@
 }
 
 .register-section{
-  background-color: grey;
+  background-color: #cafafe;
   margin-top:0px;
   margin-bottom: 0px;
 }
@@ -11,7 +11,7 @@
 .register-container{
   margin: 30px auto;
   max-width: 500px;
-  background-color: white;
+  background-color: #cafafe;
 }
 
 
@@ -25,24 +25,46 @@
 #first-name,
 #username,
 #password,
-select{
+.register-container select{
   font-size: 20px;
   width: 100%;
-  padding: 15px;
+  padding: 10px;
   outline-color: #84ceeb;
   margin-bottom: 20px;
-  border: grey 1px solid;
-  margin-top: 7px;
-  margin-bottom: 20px;
+  border: #cafafe 1px solid;
+  margin-bottom: 15px;
+}
+
+.register-container label{
+  float: left;
+  margin-left: 10px;
+  margin-bottom: 5px;
 }
 
 
 .register-btn{
+  margin: 26px auto 0px auto;
+  background: #fc4445;
   cursor: pointer;
-  padding: 12px 30px;
-  margin: 15px;
+  color: white;
+  padding: 15px 12px;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 15px;
+  max-width: 200px;
+  transition: background-color 0.5s ease;
+  border: none;
 }
+
+.register-btn:hover{
+  /* background-color: #DB57DB; */
+}
+
+
+
+
 
 select{
   display: block;
