--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,7 +5,7 @@
 footer{
   color: #3B3B3B;
   background-color: #3feee6;
-  height: 45px;
+  height: 55px;
   width: 100%;
   bottom: 0;
   margin: 0;
@@ -17,16 +17,19 @@ footer{
   top: 20px;
 }
 
+.fa-github-square,
+.fa-linkedin{
+  font-size: 40px;
+}
+
 .githubIcon-container{
   float: right;
-  margin: 0px 10px;
-  width: 30px;
-  height: 30px;
+  margin: 0px 25px;
 }
 
 .linkedinIcon-container{
   float: left;
-  margin: 0px 10px;
+  margin: 0px 25px;
   width: 30px;
   height: 30px;
 }
