--- a/src/components/LandingHeader/LandingHeader.css
+++ b/src/components/LandingHeader/LandingHeader.css
@@ -6,19 +6,35 @@
 header {
   height: 100vh;
   padding: 45px 15px;
-  background-image: url("../../assets/o.jpg");
+  background-image: url("../../assets/landing.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  font-family: 'Fira Sans', sans-serif;
-  font-weight: bold;
-
-}
-
-.sub-header{
-  text-transform: lowercase;
 }
 
 .appname{
-  margin-top: 200px;
-  font-size: 60px;
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  font-style: italic;
+  font-weight: bold;
+  font-weight: bold;
+  color: white;
+  margin-top: 220px;
+  font-size: 75px;
+}
+
+.appname-container,
+.subhdr-container{
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 500px;
+  text-align: left;
+}
+
+.sub-header{
+  font-family: 'Chivo', sans-serif;
+  font-weight: 500;
+  margin-top: 0px;
+  font-size:42px;
+  /* text-transform: uppercase; */
+  color: white;
 }
