--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,7 +1,10 @@
 * {
   box-sizing: border-box;
-  /* font-family: 'Roboto Condensed', sans-serif; */
   color: #3B3B3B;
+}
+
+a{
+  text-decoration: none;
 }
 
 fieldset{
