--- a/src/components/MapForm/MapForm.css
+++ b/src/components/MapForm/MapForm.css
@@ -6,4 +6,32 @@
   width: 100%;
   height: 60px;
   font-size: 20px;
+  text-align: center;
+}
+
+
+.mapform{
+  margin-top: 90px;
+}
+
+.mapform-legend{
+  font-weight: bold;
+  font-size: 25px;
+}
+
+#search-btn{
+  margin: 25px auto 15px auto;
+  margin-right: auto;
+  background: #fc4445;
+  cursor: pointer;
+  color: white;
+  padding: 10px 6px;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  max-width: 200px;
+  /* transition: background-color 0.5s ease; */
+  border: none;
 }
