--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -3,6 +3,7 @@
 }
 
 .joinpitch-section{
-  margin-top: 10px;
-  margin-bottom: 80px;
+  margin:0px;
+  padding: 30px;
+  background-color: #97acef;
 }
