--- a/src/components/PlaceDetails/PlaceDetails.css
+++ b/src/components/PlaceDetails/PlaceDetails.css
@@ -4,11 +4,12 @@
 
 
 .placedetails-container{
-  margin-left: auto;
+  margin: 30px auto;
   margin-right: auto;
-  border: 1px solid grey;
-  margin:60px;
+  margin-bottom: 30px;
   padding:30px;
+  max-width: 520px;
+  border: 1px grey solid;
 }
 
 
