--- a/src/components/ReviewForm/ReviewForm.css
+++ b/src/components/ReviewForm/ReviewForm.css
@@ -8,13 +8,18 @@
 
 .review-form legend{
   font-weight: bold;
-  font-size:23px;
+  font-size: 26px;
   text-align: center;
+  padding: 20px;
 
 }
 
 .question-container{
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 25px;
+  padding-top: 1px;
+  padding-bottom: 10px;
 }
 
 .submit-review-btn{
@@ -28,10 +33,96 @@
   align-items: center;
   justify-content: center;
   font-size: 16px;
-  /* transition: background-color 0.5s ease; */
   border: none;
 }
 
+#summary{
+  width:100%;
+}
+
+#duration,
+#title,
+#summary{
+  font-size: 18px;
+  padding: 10px;
+  border: 1px solid #cafafe;
+}
+
 #visitDate{
-  font-size: 25px;
+  font-size: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  padding: 4.2px;
+  border: 1px solid #cafafe;
+}
+
+
+.question-container p {
+  margin-bottom: 3px;
+  font-size: 19px;
+  font-weight: bold;
+  margin-top: 5px;
+}
+
+.question-container label {
+  font-size: 18px;
+}
+
+textarea {
+  width: 80%;
+  height: 150px;
+}
+
+.question-container {
+  background-color: #cafafe;
+}
+
+
+label {
+    padding: 10px;
+    background-color: white;
+    display: flex;
+    color: #060d46;
+    cursor: pointer;
+    transition: all 0.3s ease-out;
+    height: 100%;
+    border: 1px solid #cafafe;
+}
+
+
+label:hover, label:focus {
+    background-color: #cafafe;
+  }
+
+input[type="radio"]{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    border: 2px solid #ffffff;
+    transition: 0.2s all linear;
+    outline: none;
+    margin-right: 5px;
+    position: relative;
+    top: 2px;
+    flex: 0 0 auto;
+    margin-right: 10px;
+}
+
+input[type="radio"]:checked{
+    border: 8px solid #fc4445;
+}
+
+.calendarIcon,
+.durationIcon,
+.ratingIcon,
+.safetyIcon,
+.walletIcon,
+.hangerIcon{
+  width: 40px;
+  height: 40px;
+  /* transform: rotate(-30deg); */
 }
