--- a/src/components/LoggedInNav/LoggedInNav.css
+++ b/src/components/LoggedInNav/LoggedInNav.css
@@ -1,3 +1,15 @@
+nav {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1% 0;
+  background-color: #3feee6;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+}
+
 .nav-btn a{
   cursor: pointer;
   font-size: 12px;
