--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,9 +2,22 @@
   box-sizing: border-box;
 }
 
+nav {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1% 0;
+  background-color: #3feee6;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+}
+
 nav{
   padding: 0px;
 }
+
 
 .login-container{
   padding: 0px;
