added moment package, rating icons, and authetication

--- a/src/components/UniqueReview/UniqueReview.css
+++ b/src/components/UniqueReview/UniqueReview.css
@@ -1,3 +1,11 @@
 .uniquereview-container{
   border: grey solid 2px;
+  margin: 20px;
+  text-align: left;
+  padding: 10px 30px;
+}
+
+.stars{
+  height: 30px;
+  width: 35px;
 }
