--- a/src/components/JoinPitch/JoinPitch.css
+++ b/src/components/JoinPitch/JoinPitch.css
@@ -3,9 +3,15 @@
 }
 
 .joinpitch-container{
-  margin-left: auto;
-  margin-right: auto;
-  border: solid 1px black;
-  padding: 40px 10px;
+  margin: 0px auto;
+  padding: 30px 10px;
   height: 210px;
+  width: 240px;
+  background-color: none;
+}
+
+.joinpitch-content{
+  margin:0px;
+  color:  white;
+  font-size: 23px;
 }
