--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -103,7 +103,7 @@ nav{
 
 .register-link{
   margin: 5px;
-  margin-top: 1px;
+  margin-top: 6px;
   font-size: 17px;
   margin-bottom: 10px;
 }
@@ -120,7 +120,7 @@ nav{
 }
 
 .register-link-link:hover {
-  color: #3B3B3B;
+  color: #fc4445;
 
 }
 
