--- a/src/components/MapFormResult/MapFormResult.css
+++ b/src/components/MapFormResult/MapFormResult.css
@@ -1,3 +1,10 @@
 * {
   box-sizing: border-box;
 }
+
+
+.mapform-results-container{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border: 2px solid grey;
+}
