--- a/src/components/PlaceDetails/PlaceDetails.css
+++ b/src/components/PlaceDetails/PlaceDetails.css
@@ -4,11 +4,9 @@
 
 
 .placedetails-container{
-  margin: 30px auto;
+  margin-left: auto;
   margin-right: auto;
-  margin-bottom: 30px;
   padding:30px;
-  max-width: 520px;
   border: 1px grey solid;
 }
 
