--- a/src/components/ReviewForm/ReviewForm.css
+++ b/src/components/ReviewForm/ReviewForm.css
@@ -1,8 +1,6 @@
 .review-form{
   border: 2px solid grey;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 50px;
+  margin: 50px auto;
   text-align: left;
 }
 
