--- a/src/components/Greeting/Greeting.css
+++ b/src/components/Greeting/Greeting.css
@@ -1,32 +1,31 @@
-/* #a6d4f4; */
-/* #FFF77D; */
-
-
 * {
   box-sizing: border-box;
 }
 
 .greeting{
-  margin-top: 80px;
-  /* background-color: #cafafe; */
-  padding: 120px 15px;
+  margin-top: 5px;
+  background-color: #fc4445;
+  padding: 100px 15px;
 }
 
 
 .choice{
   margin-bottom: 50px;
+  font-size: 40px;
+  color: white;
 }
 
 .review-link,
 .explore-link{
-  background-color: #cafafe;
+  border: #3feee6 10px solid;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 25px;
   height: 200px;
   width: 250px;
-  /* border: 1px solid red; */
 }
+
+
 
 .review-img,
 .explore-img{
@@ -37,6 +36,8 @@
 }
 
 
-.link{
-  font-size: 23px;
+.choice-link{
+  font-size: 25px;
+  color: white;
+  /* font-weight: bold; */
 }
