--- a/src/components/MapForm/MapForm.css
+++ b/src/components/MapForm/MapForm.css
@@ -2,11 +2,17 @@
   box-sizing: border-box;
 }
 
+.mapform-results-container{
+  padding-top: 45px;
+  padding-bottom: 30px;
+}
+
 #autocomplete{
-  width: 100%;
+  width: 90%;
   height: 60px;
   font-size: 20px;
   text-align: center;
+  border: 5px solid #3feee6;
 }
 
 
@@ -16,7 +22,7 @@
 
 .mapform-legend{
   font-weight: bold;
-  font-size: 25px;
+  font-size: 30px;
 }
 
 #search-btn{
@@ -32,6 +38,5 @@
   justify-content: center;
   font-size: 16px;
   max-width: 200px;
-  /* transition: background-color 0.5s ease; */
   border: none;
 }
