--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -4,7 +4,8 @@
 
 #map{
   width: 100%;
-  height: 320px;
+  height: 350px;
   margin-left: auto;
   margin-right: auto;
+  border: #3feee6 solid 8px;
 }
