--- a/src/components/MapForm/MapForm.css
+++ b/src/components/MapForm/MapForm.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+.hidden{
+  display: none;
+}
+
 .mapform-results-container{
   padding-top: 45px;
   padding-bottom: 30px;
