successful location img save & display

--- a/src/components/MapForm/MapForm.css
+++ b/src/components/MapForm/MapForm.css
@@ -30,7 +30,8 @@
 }
 
 #search-btn{
-  margin: 25px auto 15px auto;
+  display: none;
+  /* margin: 25px auto 15px auto;
   margin-right: auto;
   background: #fc4445;
   cursor: pointer;
@@ -42,5 +43,5 @@
   justify-content: center;
   font-size: 16px;
   max-width: 200px;
-  border: none;
+  border: none; */
 }
