--- a/src/components/PlaceDetails/PlaceDetails.css
+++ b/src/components/PlaceDetails/PlaceDetails.css
@@ -12,11 +12,18 @@
 
 
 .destination-img-container{
-  width: 220px;
-  height: 150px;
-  border: grey solid 1px;
+  display: flex;
   margin-right: auto;
   margin-left: auto;
+  background-color: none;
+}
+
+.destination-img{
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .location,
@@ -45,6 +52,5 @@
   align-items: center;
   justify-content: center;
   font-size: 16px;
-  /* transition: background-color 0.5s ease; */
   border: none;
 }
