delete user review functionality

--- a/src/components/AllReviewsContainer/AllReviewsContainer.css
+++ b/src/components/AllReviewsContainer/AllReviewsContainer.css
@@ -9,6 +9,7 @@
   font-size: 38px;
 }
 
-/* .colorred{
-  background-color: #fc4445;
-} */
+.appfont{
+  font-family: 'Playfair Display', serif;
+  font-size: 40px;
+}
