--- a/src/components/LandingHeader/LandingHeader.css
+++ b/src/components/LandingHeader/LandingHeader.css
@@ -6,7 +6,7 @@
 header {
   height: 100vh;
   padding: 45px 15px;
-  background-image: url("../../assets/landing1.png");
+  background-image: url("../../assets/landing.png");
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
