--- a/src/components/LoggedInNav/LoggedInNav.css
+++ b/src/components/LoggedInNav/LoggedInNav.css
@@ -34,35 +34,6 @@ nav {
 
 
 
-.narrow-nav-btn{
-  width: 100%;
-  background-color: #3feee6;
-  border: none;
-  padding: 10px;
-  -webkit-transition: background-color 1s ease;
-  -moz-transition: background-color 1s ease;
-  -o-transition: background-color 1s ease;
-  transition: background-color 1s ease;
-}
-
-.narrow-nav-btn .fa-home{
-  padding-top: 22px;
-}
-
-.narrowIcon{
-  font-size: 27px;
-}
-
-.linknarrow{
-  font-size: 20px;
-  float: right;
-}
-
-.narrow-nav-btn:hover{
-  background-color: #cafafe;
-  color: #55bcc9;
-}
-
 
 .logo{
   width: 129px;
@@ -74,6 +45,7 @@ nav {
 
 @media only screen and (min-width: 640px) {
 
+  .narrowLinks,
   .navNarrow{
     display: none;
   }
@@ -109,5 +81,39 @@ nav {
     float: right;
     clear: right;
   }
+
+  .narrowLinks .row{
+    background: white;
+  }
+
+  .narrow-nav-btn{
+    width: 100%;
+    background-color: white;
+    border: none;
+    padding: 10px;
+    -webkit-transition: background-color 1s ease;
+    -moz-transition: background-color 1s ease;
+    -o-transition: background-color 1s ease;
+    transition: background-color 1s ease;
+  }
+
+  .narrow-nav-btn .fa-home{
+    padding-top: 22px;
+  }
+
+  .narrowIcon{
+    font-size: 27px;
+  }
+
+  .linknarrow{
+    font-size: 20px;
+    float: right;
+  }
+
+  .narrow-nav-btn:hover{
+    background-color: #cafafe;
+    color: #55bcc9;
+  }
+
 
 }
