updated login to register autoscroll position

--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -16,9 +16,9 @@
 
 
 .register-legend{
-  font-size: 27px;
+  font-size: 35px;
   font-weight: bold;
-  padding: 7px 20px;
+  padding: 110px 20px 25px;
 }
 
 
